--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <a class="button" href="#">Хочу шоколадки!</a>
       </section>
       <section>
-        <ul class="ice-cream-list">
+        <ul class="ice-cream-main">
           <li>
             <a href="#">
               <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
