--- a/catalog.html
+++ b/catalog.html
@@ -144,8 +144,7 @@
       </form>
       </fieldset>
       <section class="ice-cream-section">
-          <ul class="ice-cream-list">
-             <div class="ice-cream-flex">
+          <ul class="ice-cream-list ice-cream-flex">
             <li>
               <a href="#">
                 <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
@@ -289,7 +288,6 @@
                 <b>420 Р<span>/кг</span></b>
               </p>
             </li>
-          </div>
           </ul>
             <ul class="page-number">
               <li><a href="#">Вперед</a></li>
