--- a/catalog.html
+++ b/catalog.html
@@ -83,250 +83,256 @@
       <h1 class="heading">Сливочное мороженое</h1>
     </div>
   </div>
-  <div class="layout_positioner">
-    <main>
-      <form action="https://echo.htmlacademy.ru/" method="post">
-        <fieldset>
-          <legend class="sorting">Сортировка:</legend>
-          <select class="selection" name="sort" id="sort">
-            <option class="popularity" value="popularity">По популярности</option>
-            <option value="cheap">Сначала недорогие</option>
-            <option value="expensive">Сначала дорогие</option>
-            <option value="fatness">По жирности</option>
-          </select>
-        </fieldset>
-        <fieldset class="price-slide">
-          <legend class="sorting">Цена:</legend>
-          <div class="price">
-            <input type="text" name="price" placeholder="100-500 руб.">
-            <input type="range" name="price" id="price">
-          </div>
-        </fieldset>
-        <fieldset>
-          <legend class="sorting">Жирность:</legend>
-          <ul class="sort-list">
-            <li> <input type="radio" name="fatness" id="0%" id="fatness" value="0%">
-              <label for="0">0%</label></li>
-            <li> <input type="radio" name="fatness" id="to10" value="До 10%">
-              <label for="to10">До 10%</label></li>
-            <li><input type="radio" name="fatness" id="to30" value="До 30%">
-              <label for="to10">До 10%</label></li>
-            <li> <input type="radio" name="fatness" id="over30" value="Выше 30%">
-              <label for="over30">Выше 30%</label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset>
-          <legend class="sorting">Наполнители:</legend>
-          <ul class="sort-list">
-            <li><input type="checkbox" name="choc" id="choc" checked>
-              <label for="choc">Шоколадные</label>
-            </li>
-            <li><input type="checkbox" name="sugar" id="sugar" checked>
-              <label for="sugar">Сахарные присыпки</label>
-            </li>
-            </li>
-            <li>
-              <input type="checkbox" name="fruits" id="fruits">
-              <label for="fruits">Фрукты</label>
-            </li>
-            <li>
-              <input type="checkbox" name="syrop" id="syrop">
-              <label for="syrop">Сиропы</label>
-            </li>
-            <li>
-              <input type="checkbox" name="jams" id="jams">
-              <label for="jams">Джемы</label>
-              <button class="catalog-button" type="submit">Применить</button>
-            </li>
-          </ul>
-        </fieldset>
-      </form>
-      </fieldset>
-      <section class="ice-cream-section">
-          <ul class="ice-cream-list ice-cream-flex">
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочное с апельсиновым
-                  джемом и цитрусовой стружкой.
-                </a>
-              <p>
-                <b>310 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/coffechoc.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочно-кофейное с кусочками
-                  шоколода.
-                </a>
-              <p>
-                <b>380 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/whitechoc.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочно-клубничное с
-                  присыпкой из белого шоколада.
-                </a>
-              <p>
-                <b>355 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/carcream.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочный крем-брюле с
-                  карамельной подливкой.
-                </a>
-              <p>
-                <b>415 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/ice-cream1/brusjam.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочное с брусничным
-                  джемом.
-                </a>
-              <p>
-                <b>325 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/ice-cream1/blackberry.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочно-черничное с цельными
-                  ягодами черники.
-                </a>
-              <p>
-                <b>410 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/ice-cream1/lemonrain.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочно-лимонное с
-                  карамельной присыпкой.
-                </a>
-              <p>
-                <b>375 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/ice-cream1/chococream.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочное с шоколадной
-                  стружкой.
-                </a>
-              <p>
-                <b>415 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/ice-cream2/chocvanil.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочное-ванильное с
-                  кусочками шоколада.
-                </a>
-              <p>
-                <b>440 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/ice-cream2/mentolsyr.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочное с ментоловым
-                  сиропом.
-                </a>
-              <p>
-                <b>355 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/ice-cream2/blackchoc.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  Сливочное с кусочками черного
-                  шоколада.
-                </a>
-              <p>
-                <b>355 Р<span>/кг</span></b>
-              </p>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/ice-cream/ice-cream2/slivmint.png" width="267" height="267" alt="Мороженное">
-              </a>
-                <a href="#">
-                  сливочное с мятным сиропом
-                </a>
-              <p>
-                <b>420 Р<span>/кг</span></b>
-              </p>
-            </li>
-          </ul>
-            <ul class="page-number">
-              <li><a href="#">Вперед</a></li>
-              <li><a class="current-page" href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li><a href="#">Назад</a></li>
-            </ul>
-      </section>
-    </main>
-    <footer>
-      <div class="layout_positioner">
-        <footer>
-          <div class="footer-flex">
-            <ul class="social-media">
-              <li><a target="blank" href="twitter.com">Твиттер</a></li>
-              <li><a target="blank" href="instagram.com">Инстаграм</a></li>
-              <li><a target="blank" href="facebook.com">Фэйсбук</a></li>
-              <li><a target="blank" href="vkontakte.ru">Вконтакте</a></li>
-            </ul>
-            <div class="footer-info">
-              <ul>
-                <li><a class="delivers" href="#">Для поставщиков</a></li>
-                <li><a href="#">О производстве</a></li>
-              </ul>
-              <ul>
-                <li><a href="#">Наши документы</a></li>
-                <li><a href="#">Экологические стандарты</a></li>
-              </ul>
+  <main class="layout_positioner">
+    <form action="https://echo.htmlacademy.ru/" method="post">
+      <div class="sort-flexbox">
+        <div>
+          <fieldset>
+            <legend class="sorting">Сортировка:</legend>
+            <select class="selection" name="sort" id="sort">
+              <option class="popularity" value="popularity">По популярности</option>
+              <option value="cheap">Сначала недорогие</option>
+              <option value="expensive">Сначала дорогие</option>
+              <option value="fatness">По жирности</option>
+            </select>
+          </fieldset>
+        </div>
+        <div>
+          <fieldset class="price-slide">
+            <legend class="sorting">Цена:</legend>
+            <div class="price">
+              <input type="text" name="price" placeholder="100-500 руб.">
+              <input type="range" name="price" id="price">
             </div>
-            <div class="flex-made">
-              <a class="logo-footer" href="#"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="108" height="39" alt="HTML-Academy"></a>
-              <p class="made-phrase">Сделанно в <a target="blank" href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
-            </div>
-          </div>
-        </footer>
+          </fieldset>
+        </div>
+        <div>
+          <fieldset>
+            <legend class="sorting">Жирность:</legend>
+            <ul class="sort-list">
+              <li> <input type="radio" name="fatness" id="0%" id="fatness" value="0%">
+                <label for="0">0%</label></li>
+              <li> <input type="radio" name="fatness" id="to10" value="До 10%">
+                <label for="to10">До 10%</label></li>
+              <li><input type="radio" name="fatness" id="to30" value="До 30%">
+                <label for="to10">До 10%</label></li>
+              <li> <input type="radio" name="fatness" id="over30" value="Выше 30%">
+                <label for="over30">Выше 30%</label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
+        <div>
+          <fieldset>
+            <legend class="sorting">Наполнители:</legend>
+            <ul class="sort-list">
+              <li><input type="checkbox" name="choc" id="choc" checked>
+                <label for="choc">Шоколадные</label>
+              </li>
+              <li><input type="checkbox" name="sugar" id="sugar" checked>
+                <label for="sugar">Сахарные присыпки</label>
+              </li>
+              </li>
+              <li>
+                <input type="checkbox" name="fruits" id="fruits">
+                <label for="fruits">Фрукты</label>
+              </li>
+              <li>
+                <input type="checkbox" name="syrop" id="syrop">
+                <label for="syrop">Сиропы</label>
+              </li>
+              <li>
+                <input type="checkbox" name="jams" id="jams">
+                <label for="jams">Джемы</label>
+                <button class="catalog-button" type="submit">Применить</button>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
+      </div>
+    </form>
+    </fieldset>
+    <section class="ice-cream-section">
+      <ul class="ice-cream-list ice-cream-flex">
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/orangejam.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочное с апельсиновым
+            джемом и цитрусовой стружкой.
+          </a>
+          <p>
+            <b>310 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/coffechoc.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочно-кофейное с кусочками
+            шоколода.
+          </a>
+          <p>
+            <b>380 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/whitechoc.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочно-клубничное с
+            присыпкой из белого шоколада.
+          </a>
+          <p>
+            <b>355 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/carcream.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочный крем-брюле с
+            карамельной подливкой.
+          </a>
+          <p>
+            <b>415 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/ice-cream1/brusjam.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочное с брусничным
+            джемом.
+          </a>
+          <p>
+            <b>325 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/ice-cream1/blackberry.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочно-черничное с цельными
+            ягодами черники.
+          </a>
+          <p>
+            <b>410 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/ice-cream1/lemonrain.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочно-лимонное с
+            карамельной присыпкой.
+          </a>
+          <p>
+            <b>375 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/ice-cream1/chococream.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочное с шоколадной
+            стружкой.
+          </a>
+          <p>
+            <b>415 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/ice-cream2/chocvanil.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочное-ванильное с
+            кусочками шоколада.
+          </a>
+          <p>
+            <b>440 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/ice-cream2/mentolsyr.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочное с ментоловым
+            сиропом.
+          </a>
+          <p>
+            <b>355 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/ice-cream2/blackchoc.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            Сливочное с кусочками черного
+            шоколада.
+          </a>
+          <p>
+            <b>355 Р<span>/кг</span></b>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/ice-cream/ice-cream2/slivmint.png" width="267" height="267" alt="Мороженное">
+          </a>
+          <a href="#">
+            сливочное с мятным сиропом
+          </a>
+          <p>
+            <b>420 Р<span>/кг</span></b>
+          </p>
+        </li>
+      </ul>
+      <ul class="page-number">
+        <li><a href="#">Назад</a></li>
+        <li><a class="current-page" href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">Вперед</a></li>
+      </ul>
+    </section>
+  </main>
+  <footer class="layout_positioner">
+    <div class="footer-flex">
+      <ul class="social-media">
+        <li><a target="blank" href="twitter.com">Твиттер</a></li>
+        <li><a target="blank" href="instagram.com">Инстаграм</a></li>
+        <li><a target="blank" href="facebook.com">Фэйсбук</a></li>
+        <li><a target="blank" href="vkontakte.ru">Вконтакте</a></li>
+      </ul>
+      <div class="footer-info">
+        <ul>
+          <li><a class="delivers" href="#">Для поставщиков</a></li>
+          <li><a href="#">О производстве</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
+      </div>
+      <div class="flex-made">
+        <a class="logo-footer" href="#"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="108" height="39" alt="HTML-Academy"></a>
+        <p class="made-phrase">Сделанно в <a target="blank" href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
+      </div>
+    </div>
+  </footer>
 </body>
-</div>
 
 </html>
